Updated foreign code examples to latest JDK