@@ -1,13 +1,13 @@
 ///usr/bin/env jbang "$0" "$@" ; exit $?
 
-//JAVA 17+
+//JAVA 16
 //JAVAC_OPTIONS --add-modules jdk.incubator.foreign
-//JAVA_OPTIONS --add-modules jdk.incubator.foreign -Dforeign.restricted=permit --enable-native-access=ALL-UNNAMED
+//JAVA_OPTIONS --add-modules jdk.incubator.foreign -Dforeign.restricted=permit
 
 import jdk.incubator.foreign.CLinker;
 import jdk.incubator.foreign.FunctionDescriptor;
+import jdk.incubator.foreign.LibraryLookup;
 import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.ResourceScope;
 
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodType;
@@ -17,14 +17,13 @@ class cstrlen {
     public static void main(String... args) throws Throwable {
         // Get a handle to the standard `strlen()` function
         MethodHandle strlen = CLinker.getInstance().downcallHandle(
-                CLinker.systemLookup().lookup("strlen").get(),
+                LibraryLookup.ofDefault().lookup("strlen").get(),
                 MethodType.methodType(long.class, MemoryAddress.class),
                 FunctionDescriptor.of(CLinker.C_LONG, CLinker.C_POINTER)
         );
 
         // And call it
-        try (var scope = ResourceScope.newConfinedScope()) {
-            var cString = CLinker.toCString("Hello", scope);
+        try (var cString = CLinker.toCString("Hello")) {
             long len = (long)strlen.invokeExact(cString.address()); // 5
             System.out.println(len);
         }
